--- a/browser/scss/directives/products-directive.scss
+++ b/browser/scss/directives/products-directive.scss
@@ -1,8 +1,6 @@
 #products-directive {
-	.card-row {
-		margin-top: 30px;
-	}
 	.card {
+		margin-top: 30px;
 		border-radius: 0px;
 
 		.card-title {
@@ -12,8 +10,9 @@
 			margin: 20px 0px 10px 0px;
 		}
 		.list-group-item {
-			font-weight: bold;
+			// font-weight: bold;
 			transition: 0.2s;
+			font-family: 'Roboto';
 
 			&:hover {
 				cursor: pointer;
