--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -20,5 +20,23 @@
 	    letter-spacing: 1px;
 	    font-size: 26px;
 	}
+	.cta-btn {
+		width: 250px;
+		font-weight: bold;
+		background: white;
+		border: 0px;
+		// border: 1px solid rgba(0,0,0,.125);
+		color: #000000;
+		font-size: 24px;
+		padding: 12px 0px 10px 0px;
+		margin: 10px;
+		transition: 0.2s;
+		box-shadow: 3px 4px 5px 0px rgba(158,156,158,1);
+		&:hover {
+			background: #000000;
+			color: white;
+			box-shadow: none;
+		}
+	}
 }
 
