--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -57,7 +57,7 @@ table {
 	tr:nth-child(odd) {background-color: #f5f8fc;}	
   tr:nth-child(even) {background-color: white;}  
 	th, td {
-		border: 0px !important;
+		border: 0px;
 	}
 }
 
@@ -143,3 +143,4 @@ thead.padded {
 @import 'directives/main';
 @import 'home/main';
 @import 'products/main';
+@import 'product/main';
