--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -4,6 +4,9 @@
 		width: 150px;
 		margin: 0 auto;
 	}
+	#home-img {
+		max-width: 50%;
+	}
 	h1 {
 		margin-top: 40px;
 		text-align: center;
@@ -36,6 +39,14 @@
 			background: #000000;
 			color: white;
 			box-shadow: none;
+		}
+	}
+	@media screen and (max-width: 767px){
+		#home-img {
+			max-width: 100%;
+		}
+		.img-container {
+			display: none;
 		}
 	}
 }
